Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85557

When doing a sort on a ListModel in a WorkerScript then after syncing the ListView does not show the updated model

XMLWordPrintable

    • 2996439993c587bc9c7169e4f152169f28247c21

      When doing a sort on a ListModel in a WorkerScript then after syncing the ListView does not show the updated model.

      In the example, there are a couple of issues related to this, which are fixed with the attached patch. Firstly if you change the model and then sort it will show the wrong one afterwards. And doing a move sort will cause a crash. These issues are resolved with the attached patch, but this still leaves the fact that the move sort does not display the correct result despite the fact that the model itself is in the right order.

        1. 1434218.diff
          1 kB
        2. qtbug85557.tar.gz
          119 kB
        For Gerrit Dashboard: QTBUG-85557
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes